# python-poetry-projects

./: .gitignore
fastapi-todo-poetry/: .gitignore  main.py  package-lock.json  pyproject.toml
fastapi-todo-poetry/src/todo/console_clients/: nodejs_console_client.js  nodejs_console_client.ts  python_console_client.py
fastapi-todo-poetry/src/todo/database/: database_connectivity.py  database_operations.py  database_tables.py  models.py
fastapi-todo-poetry/src/todo/routes/: main.py
fastapi-todo-poetry/src/todo/streamlit/: streamlit_client.py
fastapi-todo-poetry/tests/: test_api.py
